--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -22,7 +22,15 @@
 
 旅美多年，鲜少看华人电视节目，但这回我真想“见识”一下，究竟是什么样的“都市夜景追跑竞技秀”能让参演者体力不支？又是什么原因让工作团队毫无危机意识，错失救人的黄金时间，让一.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706648.md#1" target="_blank">白马：陆媒的衰弱和新唐人、大纪元的强盛</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706648.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/photo-600x400-1-150x120.jpg" align ="left"></a>日前，中国大陆的鸡西新闻传媒集团由于一年不发工资，集团联合政府部门动员新闻工作者辞职。200多媒体人在单位门口、街边打出讨薪横幅……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:44 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706175.md#1" target="_blank">王赫：中俄关系“新时代”如何“玩”？</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706175.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1506052148492039-150x120.jpg" align ="left"></a>2019年，中俄双方都称中俄关系处于70年来历史上最好水平。其标志是，6月5日，习近平和普京共同宣布，将两国关系提升为“中俄新时代全面战略协作伙伴关系”。这个新表述在中俄两国各自的外交中，都是独一份；当然，这是采用了中共的话语，中共搞了五花八门的种种“伙伴关系”来迷惑、诱惑人，其实就是大忽悠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 7:32 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11709979.md#1" target="_blank">吐为快：共匪在香港秀道德</a><br></h3>特务乱金港，黑警暗珠光
+烟弹弥党恨，水炮射共狂
+傀府养一娥，万家夜凄怆
+时闻被杀坠，冤尸浮海浪
+港铁通陆狱，单衣何酷凉
+漆黑闪电棍，稚子哭爹娘
+勇武抓不尽，和理非转钢
+民意道何在，民主德飘香......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:01 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11709792.md#1" target="_blank">岳横：诡秘角落里的另类“语言”</a><br></h3>中国大陆历经中共七十年的血腥暴政，早就国已不国。国已不国的表现之一，就是从官场到社会的流氓、帮派、黑社会化。人有人言，兽有兽语，黑社会有其特有的“黑话”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 12:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708330.md#1" target="_blank">廖祖笙：或为白卷先生习近平</a><br></h3>习近平先生，“法治国家”的法治环境和人权环境，杂草丛生、荒芜鹿戏久矣，这不仅常让国人觉得这是个非人间，而且也严重损害“新政”的执政形象和政绩。“人之生乎地上之无几何也，譬之犹驷驰而过隙也”，若你在任期内不能尽快找到有效的突破口，那么御任之时，你或为白卷先生习近平，国人所能记住你的好，无非也就两件事，一是解救了海量的被劳.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11708236.md#1" target="_blank">文武：向心孟晚舟看似倒楣 实则幸运</a><br></h3>孟晚舟在加拿大被抓，至今已有一年的时间了，向心是最近被台湾抓住的。从一般常识而言，谁被抓了都是件倒楣的事情，可是在今天这个特殊的历史时期，对于一些特殊的人来说，被抓了，不仅不是倒楣的事情反而是件幸运的事情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 4:57 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/8/n11707892.md#1" target="_blank">戈壁东：中共威胁要对美国搞恐袭？</a><br></h3>12月4日有一个惊人新闻来自中共官方发言人华春莹，在提到美国众议院12月3日通过的新疆人权法案的时候，为了把新疆的大规模集中营与反恐扯在一起，华春莹特别提到美国遭遇的911恐怖袭击，她的说法是“殷鉴不远，不要好了伤疤忘了痛”。
@@ -35,9 +43,5 @@
 四面楚歌乌江泪，共产遗梦七十载。
 万剑齐诛幽灵鬼，饮恨绝命中南海。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 2:05 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11706778.md#1" target="_blank">袁斌：李洪元被抓原因曝光 中共和华为被打脸</a><br></h3>近日曝光的华为前员工“李洪元事件”轰动了整个舆论界，大陆网民乃至一些官媒纷纷指责华为盘剥员工，榨取完剩余价值之后抛弃。中国式公司的血汗工厂性质，以及大企业与政府勾结打压员工的普遍性，也成为人们热议的话题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 1:16 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706255.md#1" target="_blank">李春草：哀土共</a><br></h3>土共惊魂看美国，跳脚三尺亦无措；
-港府傀寒人权法，红楼妖呛贸战火；
-共产天堂原是幻，马教破产本邪说；
-毛贼不保红崽福，空向灵堂哭奈何。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 10:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/news392_4.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/news392_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/news392_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_4.htm">http://www.epochtimes.com/gb/news392_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
